# ai-maturity-framework

./: .gitignore  README.md  pyproject.toml
docs/: AI_Maturity_Scorecard.xlsx  JSONL_FORMAT.md  MATURITY_ASSESSMENT_GROUND_TRUTH.md  RUBRIC_OVERVIEW.md  SIGNAL_GRADING_GUIDE.md
src/ai_maturity/: analytics_prompts.py  classifier.py  claude_judge.py  claude_writer.py  cli.py  context_extractor.py  exemplars.py  extractor.py  grader.py  ground_truth.py  html_report.py  metrics_computer.py  narrative_prompts.py  pipeline.py  prompt_builder.py  report.py  router.py  scorer.py  store.py  taxonomy.py
tests/: test_analytics_prompts.py  test_classifier.py  test_claude_judge.py  test_claude_writer.py  test_cli.py  test_cli_assess.py  test_cli_new.py  test_cli_report.py  test_context_extractor.py  test_exemplars.py  test_extractor.py  test_grader.py  test_ground_truth.py  test_metrics_computer.py  test_narrative_prompts.py  test_pipeline.py  test_prompt_builder.py  test_report.py  test_report_analytics.py  test_router.py  test_scorer.py  test_store.py  test_taxonomy.py
