[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-maturity"
version = "0.1.0"
description = "AI Maturity Framework — assess and track AI adoption maturity across your team"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
ai-maturity = "ai_maturity.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
